--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* INDEX HTML CSS */
+
 body{
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -100,3 +102,5 @@ img{
     word-break: break-word;
     border: 0;
 }
+
+/* END OF INDEX HTML CSS */
